--- a/css/backoffice/layout/tab-container/_tab-container.scss
+++ b/css/backoffice/layout/tab-container/_tab-container.scss
@@ -137,6 +137,7 @@ $ibo-tab--temporary-remote-content--button--hover--color: $ibo-color-grey-200 !d
 
 .ibo-tab-container--tab-container {
   padding: $ibo-tab-container--tab-container--padding-y $ibo-tab-container--tab-container--padding-x;
+  overflow-x: auto;
 }
 
 .ibo-is-scrollable .ibo-tab-container--tab-container--label {
