--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -40,7 +40,7 @@ $ibo-field--value-decoration--spacing-x: 0.5rem !default;
     .ibo-field--value {
       &, & * {
         word-break: break-word;
-        white-space: inherit; /* Here we don't put break-spaces as it would put ".ibo-feld-small .ibo-field-value" on a new line due to the spaces/indentation of the HTML templates. For now we rather have this rule than diminish the templates readability/maintenability */
+        white-space: inherit; /* Here we don't put break-spaces as it would put ".ibo-field-small .ibo-field-value" on a new line due to the spaces/indentation of the HTML templates. For now we rather have this rule than diminish the templates readability/maintenability */
       }
     }
     &.ibo-field-large {
