N°3800 Fix color for highlighted code blocks We want content in a simple code tag to be black But the color set by Highligh.js must be kept

--- a/css/backoffice/utils/helpers/_misc.scss
+++ b/css/backoffice/utils/helpers/_misc.scss
@@ -159,7 +159,13 @@ body.ibo-has-fullscreen-descendant {
     width: unset !important;
     max-width: max-content;
   }
-  code {
+
+  & > code {
+    color: initial;
+  }
+
+  /* hljs is the CSS class for Highlight.js block codes */
+  :not(pre.hljs) code {
     color: initial;
   }
 }
