--- a/css/backoffice/layout/_top-bar.scss
+++ b/css/backoffice/layout/_top-bar.scss
@@ -26,6 +26,8 @@ $ibo-top-bar--elements-spacing: 32px !default;
 
 $ibo-top-bar--quick-actions--margin-right: $ibo-top-bar--elements-spacing !default;
 
+$ibo-top-bar--toolbar-dashboard-title--max-width: 350px !default;
+
 /* CSS variables (can be changed directly from the browser) */
 :root{
 	--ibo-top-bar--height: #{$ibo-top-bar--height};
@@ -65,6 +67,8 @@ $ibo-top-bar--quick-actions--margin-right: $ibo-top-bar--elements-spacing !defau
 
 .ibo-top-bar--toolbar-dashboard-title {
 	@extend %ibo-font-size-250;
+  @extend %ibo-text-truncated-with-ellipsis;
+  max-width: $ibo-top-bar--toolbar-dashboard-title--max-width;
 }
 
 .ibo-top-bar--toolbar-dashboard-menu-toggler {
