--- a/css/backoffice/layout/activity-panel/_activity-panel.scss
+++ b/css/backoffice/layout/activity-panel/_activity-panel.scss
@@ -96,9 +96,12 @@ $ibo-activity-panel--add-caselog-entry-button--right: 12px !default;
 $ibo-activity-panel--add-caselog-entry-button--top: 76px + $ibo-activity-panel--add-caselog-entry-button--right !default;
 $ibo-activity-panel--add-caselog-entry-button--diameter: 36px !default;
 $ibo-activity-panel--add-caselog-entry-button--background-color: $ibo-color-primary-600 !default;
+$ibo-activity-panel--add-caselog-entry-button--hover--background-color: $ibo-color-primary-500 !default;
+$ibo-activity-panel--add-caselog-entry-button--active--background-color: $ibo-color-primary-700 !default;
 $ibo-activity-panel--add-caselog-entry-button--color: $ibo-color-white-100 !default;
 $ibo-activity-panel--add-caselog-entry-button--border-radius: $ibo-border-radius-full !default;
 $ibo-activity-panel--add-caselog-entry-button--box-shadow: $ibo-elevation-100 !default;
+$ibo-activity-panel--add-caselog-entry-button--hover--box-shadow: $ibo-elevation-200 !default;
 
 $ibo-activity-panel--add-caselog-entry-button--icon--height: 100% !default;
 $ibo-activity-panel--add-caselog-entry-button--icon--width: $ibo-activity-panel--add-caselog-entry-button--icon--height !default;
@@ -388,7 +391,13 @@ $ibo-activity-panel--open-icon--margin-left: 0.75rem !default;
 	}
 	&:hover {
 		color: $ibo-activity-panel--add-caselog-entry-button--color;
-	}
+    background-color: $ibo-activity-panel--add-caselog-entry-button--hover--background-color;
+    box-shadow: $ibo-activity-panel--add-caselog-entry-button--hover--box-shadow;
+  }
+  &:active {
+    color: $ibo-activity-panel--add-caselog-entry-button--color;
+    background-color: $ibo-activity-panel--add-caselog-entry-button--active--background-color;
+  }
 	&.ibo-is-hidden{
 		display: none;
 	}
