Button: Fix position to relative to allow absolute positioning of child elements

--- a/css/backoffice/components/_button.scss
+++ b/css/backoffice/components/_button.scss
@@ -461,6 +461,7 @@ $ibo-button-colors: (
 }
 
 .ibo-button {
+  position: relative;
   display: inline-block; /* Used to allow truncated text on .ibo-button--label */
   padding: $ibo-button--padding-y $ibo-button--padding-x;
   border: $ibo-button--border;
