N°3907 - Polishing: Run query

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -144,6 +144,9 @@ $ibo-field--value-decoration--spacing-x: 0.5rem !default;
     }
   }
 }
+.ibo-field--label-small .ibo-field--label{
+  width: 145px;
+}
 .ibo-field--value {
   display: table;
   width: 100%;
