N°3929 Fix dashboard properties buttons and change semantics colors/icons

--- a/css/backoffice/components/_prop.scss
+++ b/css/backoffice/components/_prop.scss
@@ -13,9 +13,6 @@ $ibo-prop--apply--error--color: $ibo-color-grey-800 !default;
 .ibo-prop--apply{
   width: $ibo-prop--apply--width;
 	padding-left: $ibo-prop--apply--padding-left;
-	> span{
-		@extend .ibo-is-green;
-	}
   &.ui-state-error{
     &:after {
       color: $ibo-prop--apply--error--color;
@@ -31,9 +28,6 @@ $ibo-prop--apply--error--color: $ibo-color-grey-800 !default;
 .ibo-prop--cancel{
   width: $ibo-prop--cancel--width;
   padding-left: $ibo-prop--cancel--padding-left;
-	> span{
-		@extend .ibo-is-red;
-	}
 }
 .ibo-prop--apply, .ibo-prop--cancel{
   height: $ibo-prop--apply-cancel--height;
@@ -42,5 +36,9 @@ $ibo-prop--apply--error--color: $ibo-color-grey-800 !default;
 		height: $ibo-prop--apply-cancel--span--height;
 		width: $ibo-prop--apply-cancel--span--width;
 		text-align: center;
+    > div{
+      width: 100%;
+      height: 100%;
+    }
 	}
 }
