--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_list.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/browse/mode_list.html.twig
@@ -79,7 +79,7 @@
 							// Building tooltip for the node
 							// We have to concatenate the HTML as we return the raw HTML of the cell. If we did a jQuery.insertAfter, the tooltip would not be returned.
 							// For the same reason, tooltip widget is created in "drawCallback" instead of here.
-							if( (data.tooltip !== undefined) && (data.tooltip !== ''))
+							if( (data.tooltip !== undefined) && ($(data.tooltip).text() !== ''))
 							{
 								cellElem.html( $('<span></span>').attr('title', data.tooltip).attr('data-toggle', 'tooltip').html(data.name).prop('outerHTML') );
 							}
@@ -267,7 +267,7 @@
 				"columns": getColumnsDefinition(),
 				"order": [],
 				"drawCallback": function(settings){
-					// Tooltip has to been created here, as the render callback only returns a string, not an object.
+					// Tooltip has to be created here, as the render callback only returns a string, not an object.
 					$(this).find('[data-toggle="tooltip"]').tooltip({container: 'body', html: true, trigger: 'hover', placement: 'right'});	// container option is necessary when in a table
 					// Hiding pagination if only one page
 					if($(this).closest('.dataTables_wrapper').find('.dataTables_paginate:last .paginate_button:not(.previous):not(.next)').length < 2)
