--- a/css/backoffice/pages/_data-synchro.scss
+++ b/css/backoffice/pages/_data-synchro.scss
@@ -45,6 +45,9 @@ $ibo-data-synchro-source--replicas-status--color: (
       background-color: $bg-color;
   }
 }
+.ibo-data-synchro-source--replicas-status-separator {
+  border-top: 2px solid $ibo-color-white-100;
+}
 
 .ibo-data-synchro-source--replicas-status.ibo-is-light{
   opacity: $ibo-data-synchro-source--replicas-status--is-light--opacity;
@@ -57,8 +60,9 @@ $ibo-data-synchro-source--replicas-status--color: (
   min-width: $ibo-data-synchro-source--replicas-table--cell--min-width;
   vertical-align: middle;
   text-align: center;
-  &.arrow{
+  &.arrow {
     min-width: $ibo-data-synchro-source--replicas-table--cell--arrow--min-width;
+    border-top: 2px solid $ibo-color-grey-50;
   }
 }
 .ibo-data-synchro-source--replicas-status--warning{
