N°3907 - Polishing: Run query

--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -145,7 +145,7 @@ $ibo-field--value-decoration--spacing-x: 0.5rem !default;
   }
 }
 .ibo-field--label-small .ibo-field--label{
-  width: 145px;
+  width: 20em;
 }
 .ibo-field--value {
   display: table;
