--- a/css/backoffice/components/input/_input-select.scss
+++ b/css/backoffice/components/input/_input-select.scss
@@ -163,8 +163,8 @@ $ibo-input-select--autocomplete-item-image--border: 1px solid $ibo-color-grey-60
   float: right;
 }
 
-.selectize-dropdown {
-  z-index: 2000 !important; /* Note: This is not great as it does not take into account other elements z-index, but as selectize puts its dropdown under the <body> tag, we cannot have a z-index relative to input container. "!important" is necessary to overload the default selectize CSS rule 😕 */
+.selectize-dropdown.ui-autocomplete {
+  z-index: 2000; /* Note: This is not great as it does not take into account other elements z-index, but as selectize puts its dropdown under the <body> tag, we cannot have a z-index relative to input container. */
   max-height: $ibo-input-select-selectize--dropdown--max-height;
   overflow-y: auto;
 }
