--- a/templates/pages/backoffice/webpage/layout.html.twig
+++ b/templates/pages/backoffice/webpage/layout.html.twig
@@ -15,7 +15,9 @@
         <link rel="shortcut icon" href="{{ aPage.sFaviconUrl|add_itop_version|raw }}">
     {% endif %}
     <link rel="search" type="application/opensearchdescription+xml" title="iTop" href="{{ aPage.sAbsoluteUrlAppRoot }}pages/opensearch.xml.php">
-
+    {% for sPreloadedFont in aPage.aPreloadedFonts %}
+        <link rel="preload" href="{{ sPreloadedFont['font'] }}" as="font" type="font/{{ sPreloadedFont['type'] }}" crossorigin>
+    {% endfor %}
     {# Stylesheets MUST be loaded before any scripts otherwise we may face problems such as
 	- Visual glitches
 	- jQuery scripts spurious problems (like failing on a 'reload') #}
