--- a/css/backoffice/base/_typography.scss
+++ b/css/backoffice/base/_typography.scss
@@ -8,6 +8,7 @@
 	font-family: Raleway;
 	font-weight: 100;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway Thin'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-100-normal.woff') format('woff'),
 }
@@ -15,6 +16,7 @@
 	font-family: Raleway;
 	font-weight: 100;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway Thin'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-100-italic.woff') format('woff'),
 }
@@ -22,6 +24,7 @@
 	font-family: Raleway;
 	font-weight: 200;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway ExtraLight'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-200-normal.woff') format('woff'),
 }
@@ -29,6 +32,7 @@
 	font-family: Raleway;
 	font-weight: 200;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway ExtraLight'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-200-italic.woff') format('woff'),
 }
@@ -36,6 +40,7 @@
 	font-family: Raleway;
 	font-weight: 300;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway Light'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-300-normal.woff') format('woff'),
 }
@@ -43,6 +48,7 @@
 	font-family: Raleway;
 	font-weight: 300;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway Light'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-300-italic.woff') format('woff'),
 }
@@ -50,6 +56,7 @@
 	font-family: Raleway;
 	font-weight: 400;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-400-normal.woff') format('woff'),
 }
@@ -57,6 +64,7 @@
 	font-family: Raleway;
 	font-weight: 400;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-400-italic.woff') format('woff'),
 }
@@ -64,6 +72,7 @@
 	font-family: Raleway;
 	font-weight: 500;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway Medium'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-500-normal.woff') format('woff'),
 }
@@ -71,6 +80,7 @@
 	font-family: Raleway;
 	font-weight: 500;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway Medium'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-500-italic.woff') format('woff'),
 }
@@ -78,6 +88,7 @@
 	font-family: Raleway;
 	font-weight: 600;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway SemiBold'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-600-normal.woff') format('woff'),
 }
@@ -85,6 +96,7 @@
 	font-family: Raleway;
 	font-weight: 600;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway SemiBold'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-600-italic.woff') format('woff'),
 }
@@ -92,6 +104,7 @@
 	font-family: Raleway;
 	font-weight: 700;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-700-normal.woff') format('woff'),
 }
@@ -99,6 +112,7 @@
 	font-family: Raleway;
 	font-weight: 700;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-700-italic.woff') format('woff'),
 }
@@ -106,6 +120,7 @@
 	font-family: Raleway;
 	font-weight: 800;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway ExtraBold'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-800-normal.woff') format('woff'),
 }
@@ -113,6 +128,7 @@
 	font-family: Raleway;
 	font-weight: 800;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway ExtraBold'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-800-italic.woff') format('woff'),
 }
@@ -120,6 +136,7 @@
 	font-family: Raleway;
 	font-weight: 900;
 	font-style: normal;
+  font-display: swap;
 	src: local('Raleway Black'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-900-normal.woff') format('woff'),
 }
@@ -127,6 +144,7 @@
 	font-family: Raleway;
 	font-weight: 900;
 	font-style: italic;
+  font-display: swap;
 	src: local('Raleway Black'),
 	url($approot-relative + 'node_modules/@fontsource/raleway/files/raleway-all-900-italic.woff') format('woff'),
 }
