--- a/css/backoffice/layout/activity-panel/_caselog-entry-form.scss
+++ b/css/backoffice/layout/activity-panel/_caselog-entry-form.scss
@@ -54,6 +54,9 @@ $ibo-caselog-entry-form--lock-message--margin-left: 1rem !default;
   margin-left: $ibo-caselog-entry-form--lock-message--margin-left;
 }
 
+.ibo-caselog-entry-form--action-buttons--main-actions {
+  @extend %ibo-vertically-centered-content; /* We don't set this rule to .ibo-caselog-entry-form--action-buttons--extra-actions as well because its content can be anything, so we don't know how it will behave... */
+}
 .ibo-caselog-entry-form--action-buttons--main-actions > .ibo-popover-menu {
   z-index: 1;
 }
