--- a/css/backoffice/layout/activity-panel/_caselog-entry.scss
+++ b/css/backoffice/layout/activity-panel/_caselog-entry.scss
@@ -8,6 +8,10 @@ $ibo-caselog-entry--highlight-colors: $ibo-caselog-highlight-colors !default;
 $ibo-caselog-entry--main-information--padding-y: 12px !default;
 $ibo-caselog-entry--main-information--decoration--width: 3px !default;
 
+$ibo-caselog-entry-in-collapsible-section--body--background-color: #F9F9F9AA !default;
+$ibo-caselog-entry-in-collapsible-section--body--padding: 8px !default;
+$ibo-caselog-entry-in-collapsible-section--body--color: black !default;
+
 /* Main information */
 .ibo-caselog-entry{
 	.ibo-activity-entry--main-information{
@@ -73,3 +77,22 @@ $ibo-caselog-entry--main-information--decoration--width: 3px !default;
 		}
 	}
 }
+/* - caselog display vio ormcaselog */
+.ibo-caselog-list {
+  .ibo-collapsible-section {
+    margin: 0;
+    min-width: 22em;
+
+    .ibo-collapsible-section--header .ibo-collapsible-section--title {
+      @extend %ibo-font-size-100;
+    }
+
+    .ibo-collapsible-section--body {
+      @extend %ibo-font-size-100;
+      color: $ibo-caselog-entry-in-collapsible-section--body--color;
+      padding: $ibo-caselog-entry-in-collapsible-section--body--padding;
+      background-color: $ibo-caselog-entry-in-collapsible-section--body--background-color;
+    }
+  }
+}
+  
