--- a/css/backoffice/components/input/_input-select-icon.scss
+++ b/css/backoffice/components/input/_input-select-icon.scss
@@ -12,7 +12,9 @@ $ibo-input-select-icon--menu--icon--max-height: 80px !default;
 $ibo-input-select-icon--menu--icon--max-width: 45px !default;
 $ibo-input-select-icon--menu--icon--margin-right: 10px !default;
 
-.ibo-input-select-icon{	
+.ibo-input-select-icon{
+  display: inline-block;
+  text-align: left;
 	>img{
 		max-height: 100%;
 		max-width: 100%;
