N°3882 - Refactor display of field badges (meta enums / enums) in lists to match original mockups

--- a/css/backoffice/blocks-integrations/_all.scss
+++ b/css/backoffice/blocks-integrations/_all.scss
@@ -13,6 +13,7 @@
 @import "object-details-with-tab-container";
 @import "medallion-with-blocklist";
 @import "input-within-datatable";
+@import "field-badge-within-datatable";
 @import "jquery-blockui-within-dialog";
 @import "jquery-blockui-within-datatable";
 @import "collapsible-section-within-caselog-list";
