--- a/css/backoffice/utils/variables/colors/_base-palette.scss
+++ b/css/backoffice/utils/variables/colors/_base-palette.scss
@@ -3,7 +3,7 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-/* base color palettes */
+/* Base color palettes */
 $ibo-color-white-100: hsla(0, 0%, 100%, 1) !default;
 $ibo-color-white-200: hsla(0, 0%, 94.9%, 1) !default;
 $ibo-color-transparent: hsla(0, 0%, 100%, 0) !default;
