--- a/css/backoffice/utils/functions/_all.scss
+++ b/css/backoffice/utils/functions/_all.scss
@@ -3,7 +3,4 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
-@import "base";
-@import "base-palette";
-@import "semantic-palette";
-@import "lifecycle-palette";
+@import "color";
