--- a/datamodels/2.x/itop-core-update/view/ConfirmUpdate.ready.js.twig
+++ b/datamodels/2.x/itop-core-update/view/ConfirmUpdate.ready.js.twig
@@ -1,11 +1,11 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
-$("#do-update").on("click", function() {
+$("#do-update").on("click", function(oEvent) {
     $(this).prop("disabled", true);
     $("#cancel-update").prop("disabled", true);
     $(this).parents('form').submit();
-    e.preventDefault();
-    e.stopPropagation();
+    oEvent.preventDefault();
+    oEvent.stopPropagation();
     return false;
 });
