Setup: Improve components' licenses display

--- a/css/setup.scss
+++ b/css/setup.scss
@@ -521,6 +521,13 @@ body {
   font-size: $ibo-font-size-150;
 }
 
+#ibo-setup-licenses--components-list {
+  background-color: $ibo-color-white-200;
+  padding: 12px;
+  box-shadow: inset 0px 2px 4px 1px rgb(0, 0, 0, 0.15);
+  @extend %ibo-border-radius-300;
+}
+
 
 .setup-prefix-toggler--input--container, .setup-tls--input--container, .setup-disk-location--input--container, .setup-backup--input--container {
   display: flex;
