--- a/css/backoffice/base/_base.scss
+++ b/css/backoffice/base/_base.scss
@@ -6,6 +6,7 @@
 $ibo-scrollbar--scrollbar-width: 8px !default;
 $ibo-scrollbar--scrollbar-height: $ibo-scrollbar--scrollbar-width !default; /* For horizontal scrollbars */
 $ibo-scrollbar--scrollbar-track-background-color: $ibo-color-transparent !default;
+$ibo-scrollbar--scrollbar-track-border-radius: $ibo-border-radius-500 !default;
 $ibo-scrollbar--scrollbar-thumb-background-color: $ibo-color-grey-300 !default;
 $ibo-scrollbar--scrollbar-thumb-border: none !default;
 $ibo-scrollbar--scrollbar-thumb-border-radius: $ibo-border-radius-500 !default;
@@ -24,6 +25,7 @@ $ibo-content-block--border: 1px solid $ibo-color-grey-400 !default;
 	--ibo-scrollbar--scrollbar-width: #{$ibo-scrollbar--scrollbar-width};
 	--ibo-scrollbar--scrollbar-height: #{$ibo-scrollbar--scrollbar-height};
 	--ibo-scrollbar--scrollbar-track-background-color: #{$ibo-scrollbar--scrollbar-track-background-color};
+	--ibo-scrollbar--scrollbar-track-border-radius: #{$ibo-scrollbar--scrollbar-track-border-radius};
 	--ibo-scrollbar--scrollbar-thumb-background-color: #{$ibo-scrollbar--scrollbar-thumb-background-color};
 	--ibo-scrollbar--scrollbar-thumb-border: #{$ibo-scrollbar--scrollbar-thumb-border};
 	--ibo-scrollbar--scrollbar-thumb-border-radius: #{$ibo-scrollbar--scrollbar-thumb-border-radius};
@@ -53,6 +55,7 @@ $ibo-content-block--border: 1px solid $ibo-color-grey-400 !default;
 	}
 	&::-webkit-scrollbar-track {
 		background-color: var(--ibo-scrollbar--scrollbar-track-background-color);
+		border-radius: var(--ibo-scrollbar--scrollbar-track-border-radius);
 	}
 	::-webkit-scrollbar-thumb {
 		background-color: var(--ibo-scrollbar--scrollbar-thumb-background-color);
